--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ vignettes/*.pdf
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 .Rproj.user
+
+# examples
+RZabbix_GWP_examples.R
+haslo.rda
